[package]
name = "snapshot-merger"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snapshot-merger"
path = "src/main.rs"

[dependencies]
clap = "2.33"
log = "0.4"
env_logger = "0.11"

# Solana dependencies - version 3.0
solana-account = "3.0"
solana-accounts-db = "3.0"
solana-clock = "3.0"
solana-genesis-config = "3.0"
solana-ledger = { version = "3.0", features = ["dev-context-only-utils"] }
solana-pubkey = "3.0"
solana-runtime = { version = "3.0", features = ["dev-context-only-utils"] }
solana-sdk = "3.0"
solana-stake-program = "3.0"
solana-version = "3.0"
solana-vote-program = "3.0"

[profile.release]
opt-level = 3
lto = "thin"
